# ateclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  typescript
.github/workflows/: ci.yml
android/: gradlew
android/app/: proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/vn/bizclaw/app/: MainActivity.kt
android/app/src/main/java/vn/bizclaw/app/service/: AppController.kt  BizClawAccessibilityService.kt  BizClawDaemonService.kt  BootReceiver.kt  DeviceCapabilities.kt
android/app/src/main/java/vn/bizclaw/app/ui/chat/: ChatScreen.kt
android/app/src/main/java/vn/bizclaw/app/ui/dashboard/: DashboardScreen.kt
android/app/src/main/java/vn/bizclaw/app/ui/settings/: SettingsScreen.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
crates/bizclaw-agent/: Cargo.toml
crates/bizclaw-agent/src/: discovery.rs  lib.rs  orchestrator.rs
crates/bizclaw-brain/src/: gguf.rs  grammar.rs  lib.rs  llamacpp.rs
crates/bizclaw-brain/src/simd/: avx2.rs  mod.rs  neon.rs  sse2.rs
crates/bizclaw-channels/: Cargo.toml
crates/bizclaw-channels/src/: adapters.rs  email.rs  lib.rs  telegram.rs  whatsapp.rs
crates/bizclaw-channels/src/zalo/: mod.rs
crates/bizclaw-channels/src/zalo/client/: bot.rs  business.rs  crypto.rs  listener.rs  mod.rs  session.rs
crates/bizclaw-core/src/: config.rs
crates/bizclaw-ffi/: Cargo.toml
crates/bizclaw-ffi/src/: lib.rs
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-gateway/src/: dashboard.html  db.rs  routes.rs  server.rs  ws.rs
crates/bizclaw-hands/: Cargo.toml
crates/bizclaw-hands/src/: guardrails.rs  lib.rs  manifest.rs  registry.rs  skills.rs
crates/bizclaw-knowledge/: Cargo.toml
crates/bizclaw-knowledge/src/: lib.rs
crates/bizclaw-mcp/src/: client.rs
crates/bizclaw-memory/src/: sqlite.rs
crates/bizclaw-platform/src/: admin.rs  admin_dashboard.html  config.rs  db.rs  self_serve.rs  tenant.rs
crates/bizclaw-providers/src/: brain.rs  failover.rs  lib.rs  openai_compatible.rs  provider_registry.rs
crates/bizclaw-scheduler/: Cargo.toml
crates/bizclaw-scheduler/src/: cron.rs  dispatch.rs  engine.rs  lanes.rs  lib.rs  notify.rs  persistence.rs  store.rs  tasks.rs  workflow.rs
crates/bizclaw-security/src/: allowlist.rs  secrets.rs
crates/bizclaw-tools/src/: execute_code.rs  http_request.rs  plan_tool.rs  registry.rs  web_search.rs
data/: gallery-skills.json
docs/architecture/: system-overview.md
landing/: docs.html  index.html
src/: main.rs  platform_main.rs
