[package]
name = "bizclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent engine and core loop for BizClaw"

[dependencies]
bizclaw-core.workspace = true
bizclaw-providers.workspace = true
bizclaw-channels.workspace = true
bizclaw-memory.workspace = true
bizclaw-tools.workspace = true
bizclaw-security.workspace = true
bizclaw-mcp.workspace = true
bizclaw-knowledge.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
