[package]
name = "bizclaw-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Android/Edge FFI layer — expose BizClaw as native library (UniFFI pattern)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bizclaw-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
