[package]
name = "bizclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket gateway API for BizClaw"

[dependencies]
bizclaw-core.workspace = true
bizclaw-agent.workspace = true
bizclaw-channels.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
reqwest.workspace = true
bizclaw-scheduler.workspace = true
bizclaw-knowledge.workspace = true
bizclaw-memory.workspace = true
sha2.workspace = true
rusqlite.workspace = true
futures.workspace = true
