[package]
name = "bizclaw-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ultra-lightweight scheduler & notification system for BizClaw (<1MB RAM)"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
